--- a/src/renderer/assets/sass/app.scss
+++ b/src/renderer/assets/sass/app.scss
@@ -8,8 +8,8 @@
 @import 'fonts';
 
 // Bootstrap
-@import '/node_modules/bootstrap/scss/bootstrap.scss';
+@import '../../node_modules/bootstrap/scss/bootstrap.scss';
 // Veutify
-@import '/node_modules/vuetify/dist/vuetify.min.css'; // Ensure you are using stylus-loader
+@import '../../node_modules/vuetify/dist/vuetify.min.css'; // Ensure you are using stylus-loader
 
 @import './modules/layout.scss';
