--- a/src/renderer/assets/sass/_variables.scss
+++ b/src/renderer/assets/sass/_variables.scss
@@ -1,6 +1,6 @@
 
 // Body
-$body-bg: #1b1b1b;
+$body-bg: transparent;
 
 // Typography
 $font-family-sans-serif: "Nunito", sans-serif;
@@ -33,10 +33,3 @@ $gray: rgb(190, 190, 190);
 $tundora: #4d4d4d;
 $gallery: #EDEDED;
 $slogan: #4d4d4d;
-
-// Gradients
-$zushin-cover: linear-gradient(rgba(36, 36, 36, 0.94), rgba(36, 36, 36, 0.34));
-$slider: linear-gradient(rgba(36, 36, 36, 0.94), rgba(36, 36, 36, 0.34));
-
-// Assets
-$download-btn: "http://drive.google.com/uc?export=view&id=1FVHT_237NAV1mhIwMWevB9TDl0P2YdWw";
