Refactored the design
- Now with webview to site
- Added progress and labels
- Play button (not done)

--- a/src/renderer/assets/sass/_variables.scss
+++ b/src/renderer/assets/sass/_variables.scss
@@ -1,6 +1,6 @@
 
 // Body
-$body-bg: transparent;
+$body-bg: rgba(14,38,47,1);
 
 // Typography
 $font-family-sans-serif: "Nunito", sans-serif;
@@ -8,6 +8,7 @@ $font-size-base: 0.9rem;
 $line-height-base: 1.6;
 
 // Theme
+$default: #353535;
 $primary: #3a3a3a;
 $secondary: #8597c3;
 $accent: #578dbf;
