--- a/src/renderer/assets/sass/modules/_layout.scss
+++ b/src/renderer/assets/sass/modules/_layout.scss
@@ -45,4 +45,7 @@ body {
     &-checking-progress{
         margin: .4rem 0.1rem!important;
     }
+    &-options-list{
+        height: 6.2rem;
+    }
 }
